fixed styles on mobile

--- a/frontend/src/theme/custom.scss
+++ b/frontend/src/theme/custom.scss
@@ -119,7 +119,12 @@ p {
         color: var(--main-color);
     }
 }
-
+.toolbar-background {
+    visibility: hidden;
+}
+ion-tab-bar {
+    --background: var(--ion-background-color, #fff);
+}
 a {
     color: black;
     text-decoration: none;
